deploy/k8s/overlays/lab/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-api
spec:
  ingressClassName: nginx
  rules:
    - host: sample-api.192.168.137.111.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sample-api
                port:
                  name: http
